--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.5.2",
     "bootswatch": "^4.5.2",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-bootstrap-navbar": "0.0.5",
