--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@angular-slider/ngx-slider": "^2.0.3",
     "@angular/animations": "~10.0.8",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.0.8",
     "@angular/compiler": "~10.0.8",
     "@angular/core": "~10.0.8",
     "@angular/forms": "~10.0.8",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.8",
     "@angular/platform-browser-dynamic": "~10.0.8",
     "@angular/router": "~10.0.8",
